# codemod

./: .all-contributorsrc  .gitattributes  .gitignore  .gitmodules  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  action.yml  biome.json  cliff.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pull_request_template.md  rustfmt.toml  turbo.json  vitest.config.ts
crates/ai/: Cargo.toml  README.md
crates/ai/data/: openrouter_models.json
crates/ai/src/: execute.rs  lib.rs  model_catalog.rs  output.rs  prompt.rs
crates/ai/src/memory/: compact.rs  controller.rs  history.rs  mod.rs  policy.rs  semantic.rs  summarize.rs
crates/ai/src/tools/: bash.rs  ckg.rs  core.rs  edit.rs  glob.rs  json_edit.rs  mcp.rs  mod.rs  registry.rs  sequential_thinking.rs  task_done.rs  utils.rs
crates/ast-grep-dynamic-lang/: Cargo.toml  build.rs
crates/ast-grep-dynamic-lang/src/: build.rs  download_utils.rs  lib.rs  load_tree_sitter.rs  supported_langs.rs
crates/cli/: AGENTS.md  Cargo.toml  README.md
crates/cli/npm/: README.md  codemod  package.json
crates/cli/npm/tests/: codemod.test.js
crates/cli/report-ui/: index.html  package.json  tsconfig.json  vite.config.ts
crates/cli/report-ui/src/: app.tsx  index.css  main.tsx
crates/cli/report-ui/src/components/: agent-icons.tsx  feedback-button.tsx  registry-button.tsx  share-button.tsx
crates/cli/src/: agent_log_renderer.rs  agent_select.rs  auth_provider.rs  capabilities_security_callback.rs  diagnostics.rs  dirty_git_check.rs  engine.rs  feedback.rs  main.rs  pro_dry_run.rs  progress_bar.rs  report_server.rs  suitability.rs  webhooks.rs  workflow_runner.rs
crates/cli/src/auth/: mod.rs  storage.rs  types.rs  user_info.rs
crates/cli/src/auth/html/: post-login.html.txt
crates/cli/src/commands/: agent.rs  harness_adapter.rs  init.rs  login.rs  mcp.rs  mod.rs  output.rs  package_skill.rs  publish.rs  run.rs  search.rs  tcs.rs  unpublish.rs  whoami.rs
crates/cli/src/commands/agent/: mod.rs  tests.rs
crates/cli/src/commands/ai/: cli_tools.rs  mod.rs  tests.rs
crates/cli/src/commands/jssg/: bundle.rs  config.rs  exec.rs  list_applicable.rs  mod.rs  run.rs  test.rs
crates/cli/src/commands/workflow/: cancel.rs  list.rs  mod.rs  resume.rs  run.rs  status.rs  tui.rs  validate.rs
crates/cli/src/templates/: codemod.yaml
crates/cli/src/templates/astgrep-yaml/: workflow.yaml
crates/cli/src/templates/common/: README.md  publish-workspace.yml  publish.yml  workspace-skill-root-README.md
crates/cli/src/templates/hybrid/: workflow.toml.yaml  workflow.yaml
crates/cli/src/templates/js-astgrep/: package.json  workflow.yaml
crates/cli/src/templates/shell/: workflow.yaml
crates/cli/src/templates/skill/: README.md  SKILL.md  codemod.yaml  workflow.yaml
crates/cli/src/tui/: actions.rs  app.rs  event.rs  mod.rs  pty.rs  render.rs  render_latency_bench.rs  screens.rs  task_visibility.rs  terminal_slots.rs  tests.rs  types.rs  utils.rs
crates/cli/src/tui/screens/: mod.rs  run_list.rs  settings.rs  task_list.rs
crates/cli/src/utils/: ancestor_search.rs  env_paths.rs  manifest.rs  metrics.rs  mod.rs  package_validation.rs  path_safety.rs  registry_link.rs  resolve_capabilities.rs  rolldown_bundler.rs  skill_layout.rs
crates/cli/tests/: ai_cli_tools.rs  no_command_flow.rs  workflow_tui_pty.rs
crates/codemod-sandbox/: AGENTS.md  Cargo.toml  package.json
crates/codemod-sandbox/demo/: index.html  main.js  node.js
crates/codemod-sandbox/js/: capabilities.ts  environment.d.ts  module.ts  node.ts  type-declarations.ts  types.ts  web.ts
crates/codemod-sandbox/scripts/: copy-runtime-files.ts
crates/codemod-sandbox/src/: capabilities.rs  lib.rs  main.rs
crates/codemod-sandbox/src/ast_grep/: mod.rs  native.rs  sg_node.rs  types.rs  utils.rs  wasm_lang.rs
crates/codemod-sandbox/src/metrics/: mod.rs
crates/codemod-sandbox/src/plugins/atob/: mod.rs
crates/codemod-sandbox/src/sandbox/: errors.rs  mod.rs  runtime_module.rs
crates/codemod-sandbox/src/sandbox/engine/: codemod_lang.rs  curated_fs.rs  execution_engine.rs  fetching_vfs.rs  (+8 more)
crates/codemod-sandbox/src/tree_sitter/: mod.rs
crates/codemod-sandbox/src/utils/: mod.rs  transpiler.rs
crates/codemod-sandbox/src/workflow_global/: mod.rs  native.rs  types.rs  wasm.rs
crates/codemod-sandbox/tests/: index.ts  root_range_leading_trivia.rs
crates/codemod-sandbox/tests/integration/: mod.rs
crates/dependency-files/: Cargo.toml
crates/dependency-files/src/: lib.rs
crates/language-core/: AGENTS.md  Cargo.toml
crates/language-core/src/: error.rs  filesystem.rs  lib.rs  noop.rs  provider.rs  types.rs
crates/language-javascript/: AGENTS.md  Cargo.toml
crates/language-javascript/src/: accurate.rs  cache.rs  error.rs  lib.rs  lightweight.rs  oxc_adapter.rs  provider.rs  vfs_fs.rs
crates/language-python/: AGENTS.md  Cargo.toml
crates/language-python/src/: analyzer.rs  cache.rs  db.rs  error.rs  lib.rs  provider.rs
crates/llrt-capabilities/: Cargo.toml
crates/llrt-capabilities/src/: lib.rs  module_builder.rs  types.rs
crates/mcp/: Cargo.toml  build.rs
crates/mcp/src/: lib.rs
crates/mcp/src/handlers/: ast_dump.rs  jssg_test.rs  knowledge.rs  mod.rs  node_types.rs  package_scaffold.rs  package_validation.rs
crates/semantic-factory/: AGENTS.md  Cargo.toml
crates/semantic-factory/src/: config.rs  factory.rs  lazy.rs  lib.rs
crates/testing-utils/: Cargo.toml
crates/testing-utils/src/: config.rs  fixtures.rs  lib.rs  runner.rs  semantic.rs
crates/testing-utils/src/semantic/: compare.rs  detect.rs  diff.rs  go.rs  javascript.rs  json.rs  mod.rs  python.rs  registry.rs  rust_lang.rs  traits.rs  typescript.rs  utils.rs
crates/testing-utils/src/strictness/: compare.rs  detect.rs  diff.rs  go.rs  javascript.rs  json.rs  mod.rs  python.rs  registry.rs  rust_lang.rs  traits.rs  typescript.rs  utils.rs
crates/tree-sitter-loader/: Cargo.toml
crates/tree-sitter-loader/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: cli_create.rs  main.rs  model_catalog.rs  tree_sitter_compress.rs  ts_export.rs
(+558 files in other folders)
