[package]
name = "codemod-sandbox"
version.workspace = true
edition = "2021"

[dependencies]
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.10.0", default-features = false, optional = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
regex = { workspace = true }
tokio = { version = "1.0", features = [
  "rt-multi-thread",
  "macros",
  "fs",
], optional = true }
bytes = "1.0"
oxc_resolver = "11.13.1"
oxc = { version = "0.97.0", features = ["transformer", "codegen", "semantic"] }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-tree-sitter-sg = { git = "https://github.com/mohebifar/tree-sitter-wasm.git", branch = "upgrade/0.25.4", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
ast-grep-core = { workspace = true, default-features = false, optional = true }
ast-grep-config = { workspace = true, default-features = false, optional = true }
ast-grep-language = { workspace = true, default-features = true, optional = true }
ignore = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
codemod-llrt-capabilities = { workspace = true, optional = true, features = ["native"] }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["native", "real-fs"]
wasm = [
  "mock-fs",
  "ast-grep-core",
  "ast-grep-config",
  "web-tree-sitter-sg",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "js-sys",
  "serde-wasm-bindgen",
  "rquickjs/futures",
  "rquickjs/bindgen",
  "rquickjs/loader",
  "rquickjs/macro",
]
native = [
  "real-fs",
  "ast-grep-core/tree-sitter",
  "ast-grep-config/tree-sitter",
  "ast-grep-language",
  "rquickjs",
  "rquickjs/full-async",
  "tokio",
  "serde_yaml",
  "codemod-llrt-capabilities",
]
jssg-in-memory = ["native"]
real-fs = ["tokio", "ignore"]
mock-fs = []
