[package]
name = "dependency-files"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared dependency ecosystem and dependency file detection helpers"

[dependencies]
serde = { workspace = true, features = ["derive"] }
