[package]
name = "language-core"
version.workspace = true
edition = "2021"
description = "Core traits and types for semantic analysis providers"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
vfs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }


