[package]
name = "semantic-factory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Factory for creating semantic analysis providers"

[dependencies]
language-core.workspace = true
language-javascript.workspace = true
language-python.workspace = true
thiserror.workspace = true
log.workspace = true
vfs.workspace = true

[dev-dependencies]
tempfile.workspace = true

