[package]
name = "testing-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
libtest-mimic = "0.8.0"
similar = "2.6.0"
thiserror = "2.0.0"
serde = { workspace = true, features = ["derive"] }
codemod-llrt-capabilities.workspace = true